--- a/.env.default
+++ b/.env.default
@@ -6,6 +6,10 @@ GOOGLE_ID=
 GOOGLE_SECRET=
 TWITTER_KEY=
 TWITTER_SECRET=
+GITHUB_ID=
+GITHUB_SECRET=
+LINKEDIN_ID=
+LINKEDIN_SECRET=
 EMAIL_FROM=username@gmail.com
 EMAIL_SERVER=smtp.gmail.com
 EMAIL_PORT=465
