--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-starter",
+  "name": "wmashworth",
   "version": "5.3.0",
   "description": "A starter Next.js project with email and oAuth authentication",
   "author": "Iain Collins <me@iaincollins.com>",
@@ -26,7 +26,9 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "now-logs": "0.0.7",
     "passport-facebook": "^2.1.1",
+    "passport-github": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-linkedin": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "popper.js": "^1.12.3",
     "raw-loader": "^0.5.1",
@@ -40,12 +42,18 @@
     "universal-cookie": "^2.1.2"
   },
   "devDependencies": {
-    "eslint": "^4.5.0",
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-xo": "^0.18.2",
     "eslint-config-xo-react": "^0.13.0",
     "eslint-config-xo-space": "^0.16.0",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-require": "0.0.1",
     "ionicons": "^3.0.0",
+    "prop-types": "^15.6.0",
     "xo": "^0.18.2"
   },
   "optionalDependencies": {
