--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": "^2.0.1",
     "dotenv": "^5.0.0",
     "express-session": "^1.15.5",
+    "favicon": "0.0.2",
     "ionicons": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
@@ -39,6 +40,7 @@
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
     "sass-loader": "^6.0.6",
+    "serve-favicon": "^2.4.5",
     "universal-cookie": "^2.1.2"
   },
   "devDependencies": {
@@ -52,8 +54,10 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-require": "0.0.1",
+    "file-loader": "^1.1.7",
     "ionicons": "^3.0.0",
     "prop-types": "^15.6.0",
+    "url-loader": "^0.6.2",
     "xo": "^0.18.2"
   },
   "optionalDependencies": {
